--- a/GitHub_CONFIG.html
+++ b/GitHub_CONFIG.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Created by Sam Straus" />
 
 
-<title>GitHub Workshop</title>
+<title>Molecular and Evolutionary Ecology Research Lab</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -2826,8 +2826,9 @@ border-radius: 0px;
 
 
 
-<h1 class="title toc-ignore">GitHub Workshop</h1>
-<h3 class="subtitle">MEER Lab Meeting</h3>
+<h1 class="title toc-ignore">Molecular and Evolutionary Ecology Research
+Lab</h1>
+<h3 class="subtitle">GitHub Workshop</h3>
 <h4 class="author">Created by Sam Straus</h4>
 <h4 class="date">Updated 10 February, 2025</h4>
 
