update aesthetics of knitted html

--- a/GitHub_CONFIG.html
+++ b/GitHub_CONFIG.html
@@ -2878,7 +2878,7 @@ to install the packages:</p>
 <p><code>install.packages(c(&quot;usethis&quot;, &quot;gitcreds&quot;))</code></p>
 <p>Next, use <code>use_git_config()</code> to tell git where to find
 your GitHub account.</p>
-<p><code>{r} usethis::use_git_config(user.name = &quot;your name&quot;, user.email = &quot;name@email.org&quot;)</code></p>
+<p><code>usethis::use_git_config(user.name = &quot;your name&quot;, user.email = &quot;name@email.org&quot;)</code></p>
 <p>There is also a very simple command line approach you can <a href="https://happygitwithr.com/hello-git.html">follow here</a>, if you
 wish.</p>
 <div id="create-your-pat" class="section level4">
